--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,66 @@
+/* poppins-300 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/poppins-v24-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* poppins-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* poppins-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/poppins-v24-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* poppins-900 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 :root {
   --color-main-light: #faf4ea;
   --color-main-dark: #31261a;
   --color-brand-light: #819b57;
   --color-brand-dark: #465929;
 }
+
 body {
   color: var(--color-main-dark);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+  background-color: #d70606;
+}
+h2 {
+  font-weight: 900;
+  font-size: 64px;
+  line-height: 1.3;
 }
 ul {
-  list-style-type: none;
+  list-style: none;
 }
+/* header */
 .menu-point {
   text-decoration: none;
   color: var(--color-main-light);
 }
-
 .menu-point:hover {
   color: var(--color-brand-light);
+  font-weight: 600;
 }
 .button {
   background-color: var(--color-brand-light);
@@ -26,29 +70,93 @@ ul {
 .button:hover {
   background-color: transparent;
 }
+.button:hover a {
+  color: var(--color-brand-dark);
+}
 .button a {
   color: var(--color-main-light);
   text-decoration: none;
+  font-weight: 600;
 }
-.button a:hover {
-  color: var(--color-brand-light);
+/* main */
+.hero-section {
 }
-
 .hero-title {
+  font-size: 128px;
+  font-weight: 900;
+  text-align: center;
   color: var(--color-main-light);
 }
 .accent-color {
   color: var(--color-brand-light);
 }
 .advantages-list {
-  background-color: #819b57;
+  background-color: var(--color-brand-light);
 }
-.advantages-list li {
+.advantages-item {
+  font-weight: 300;
+  font-size: 20px;
   color: var(--color-main-light);
 }
-.color-green {
+.traditions-section {
+}
+.text-decoration {
+  font-weight: 600;
   color: var(--color-brand-light);
 }
-.color-darkgreen {
+.uppercase {
+  text-transform: uppercase;
+}
+.chefs-section h2 {
+  text-align: center;
+}
+.chefs-decoration-title {
   color: var(--color-brand-dark);
+}
+.chefs-name {
+  font-size: 40px;
+  font-weight: 600;
+}
+.formats-section h2 {
+  text-align: center;
+}
+.formats-section ul {
+  color: var(--color-main-light);
+}
+.formats-names {
+  font-size: 24px;
+  font-weight: 600;
+}
+.formats-description {
+  font-size: 14px;
+  font-weight: 300;
+}
+.contacts-form-text {
+  color: var(--color-brand-dark);
+}
+.contacts-agreement {
+  font-size: 12px;
+}
+.contacts-agreement a {
+  color: var(--color-main-dark);
+}
+.adress-info {
+  font-weight: 300;
+  font-size: 16px;
+  font-style: normal;
+  text-decoration: none;
+}
+.adress-info a {
+  color: var(--color-main-light);
+  text-decoration: none;
+}
+.footer-policity {
+  font-size: 16px;
+  font-weight: 300;
+  color: var(--color-main-light);
+  text-decoration: none;
+}
+.footer-copyright {
+  font-size: 14px;
+  color: #a18268;
 }
